Added Api keys, got rid of the request in swagDoc
